Initial quarkus