@@ -1,12 +1,11 @@
 package com.acme;
 
-import sun.misc.BASE64Encoder;
-
 import java.nio.charset.StandardCharsets;
+import java.util.Base64;
 
 public final class Base64Helper {
 
     public static String convertToBase64(String input) {
-        return new BASE64Encoder().encode(input.getBytes(StandardCharsets.UTF_8));
+        return Base64.getEncoder().encodeToString(input.getBytes(StandardCharsets.UTF_8));
     }
 }
